# clarity-boot

./: .gitignore  .gitlab-ci.yml  01_project_initialization.feature  02_transparency_report_generation.feature  CLAUDE.md  IMPLEMENTATION_INSTRUCTIONS.md  clarity_sdd.docx  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
clarity/: cli.py
clarity/data/: .env.template
clarity/phase1/: feature_agent.py  session_manager.py
clarity/phase2/: analysis_engine.py  report_builder.py  report_manager.py  static_analyzer.py  test_runner.py
clarity/phase2/templates/: report.html.j2
clarity/phase3/: __init__.py  comparison_builder.py  comparison_engine.py
clarity/phase3/templates/: compare.html.j2
clarity_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
features/: 01_project_initialization.feature  02_transparency_report_generation.feature  03_complexity_analysis_metrics.feature  04_comparison_report.feature  environment.py
features/steps/: steps.py
